<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slime_blue_dark"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/slime_text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColor="@color/slime_text"
        android:textColorHint="@color/slime_text_hint"
        android:backgroundTint="@color/slime_accent"
        android:inputType="textNoSuggestions"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/slime_text"
        android:textColorHint="@color/slime_text_hint"
        android:backgroundTint="@color/slime_accent"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/display_name"
        android:textColor="@color/slime_text"
        android:textColorHint="@color/slime_text_hint"
        android:backgroundTint="@color/slime_accent"
        android:inputType="textPersonName"
        android:layout_marginBottom="32dp"/>
        
    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error_red"
        android:textSize="12sp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/slime_button"
        android:text="@string/submit"
        android:textColor="@color/slime_text"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="@color/slime_accent"
        android:textSize="14sp"
        android:padding="8dp"/>

</LinearLayout>
